# Thing-Downloader

./: .clang-tidy  .dockerignore  .gitattributes  .readthedocs.yaml  .typo-ci.yml  Build.Dockerfile  CMakeLists.txt  Dockerfile  LICENCE  Readme.md  _typos.toml  docker-compose.yml  readthedocs.yml
.github/: codeql.yml
.github/workflows/: build.yml  clang-format.yml  clang-tidy.yml  codeql-analysis.yml  docker.yml  eslint.yml  freebsd-build.yml  lint.yml  spellcheck.yml  windows.yml
common/: CMakeLists.txt
common/include/: dl++.hpp  multi_sft.hpp  td.hpp
common/include/td/: json_store.hpp  plugin.hpp  store.hpp
common/include/td/minimal/: downloader.hpp  job.hpp
common/include/td/web/: job.hpp  manager.hpp  rpc_functions.hpp  rpc_handler.hpp
common/src/: json_store.cpp  minimal_downloader.cpp  plugin.cpp
common/src/web/: job.cpp
common/src/web/manager/: downloader.cpp  thin.cpp  thread_loop.cpp
common/src/web/rpc/: handler.cpp  populate_functions.cpp
common/src/web/rpc/functions/: get_jobs.cpp  plugins.cpp
doc/: Dockerfile  Doxyfile  conf.py  index.rst  requirements.txt
doc/api/: .gitignore  dl++.rst  index.rst  plugin_spec.rst
doc/doc_plugins/: create_rst.py
doc/guides/: index.rst  installation.rst  plugin.rst  user.rst
doc/plugins/: apod.rst  humble-bundle.rst  identity.rst  index.rst  itchio.rst  operavision.rst
ext/: CMakeLists.txt  gumbo.cmake  msgpack.hpp  zlib.cmake
ext/cpr-1.9.1/: CMakeLists.txt
ext/cpr-1.9.1/include/: CMakeLists.txt
ext/seasocks-1.4.4/: CMakeLists.txt
ext/seasocks-1.4.4/src/: CMakeLists.txt
ext/seasocks-1.4.4/src/main/c/: CMakeLists.txt  Connection.cpp  HybiPacketDecoder.cpp
ext/subprocess-0.4.0/src/cpp/: CMakeLists.txt
ext/tinyxml2-9.0.0/: CMakeLists.txt
frontend/: .eslintrc.json  gatsby-config.js  gatsby-node.js  package.json  webpack.config.js
frontend/src/: RPCComponent.jsx
frontend/src/components/: AddConfig.jsx  App.js  ConfigRow.jsx  ContainerHeader.js  ContainerHeader.jsx  CurrentlyDownloading.js  CurrentlyDownloading.jsx  Downloadable.js  Downloadable.jsx  Downloadables.js  Home.js  JobQueue.js  JobQueue.jsx  JobsPage.js  JobsPage.jsx  LinkCountBar.js  LinkCountBar.jsx  Page.js  Page.jsx  PageHeader.js  Plugins.jsx
frontend/src/components/Downloadables/: ContainerHeader.js  CurrentlyDownloading.js  Downloadable.js  DownloadableContainer.js  LinkCount.js  Others.js
frontend/src/pages/: 404.js  404.jsx  index.jsx  jobs.js  jobs.jsx  plugins.jsx
frontend/src/pages/jobs/: completed.js  failed.jsx  skipped.jsx
frontend/src/pages/plugins/: configuration.jsx
frontend/static/: 404.html
plugins/: CMakeLists.txt  apod.cpp  identity.cpp
plugins/humble-bundle/: CMakeLists.txt  details.cpp  download.cpp  get_jobs.cpp  should_skip.cpp
plugins/itchio/: CMakeLists.txt  details.cpp  download_file.cpp  download_game.cpp  get_jobs.cpp  load_games.cpp  should_skip.cpp
plugins/operavision/: CMakeLists.txt  details.cpp  download_description.cpp  download_video.cpp  get_jobs.cpp  opera.hpp  should_skip.cpp
pluginspec/: v1.hpp
pluginspec/td/spec/: v1.hpp
tdd/: CMakeLists.txt  main.cpp  static_serve.cpp  web_main.cpp  winmain.cpp
tools/: CMakeLists.txt  run_clang_format.sh  run_clang_tidy.sh  run_cmake_format.sh
tools/cli_tester/: CMakeLists.txt  main.cpp  minimal_downloader.cpp
webmain/: CMakeLists.txt  main.cpp
